# ambf_registration_plugin

./: .gitignore  20231212_SinusHandEye  CMakeLists.txt  CT registration.txt  CT_registration.txt  README.md  ToDoList.md  data.txt  launch.yaml  package.xml  registration_data  setup.py
ADF/world/: checkered_floor.yaml  world.yaml
data/: HE_ambfToEE.csv  HE_referenceTomarker.csv  HE_trackerTomarker.csv  HE_worldToEE.csv
data/20230811/: Pivot_trackerTomarker.csv
data/20230824_single/: HE_trackerTomarker.csv  HE_worldToEE.csv  Pivot_trackerTomarker.csv
data/20230824reference/: HE_ambfToEE.csv  HE_referenceTomarker.csv  HE_worldToEE.csv
example/: 20240220_endoscope_registration.yaml  20240227_endoscope_registration.yaml  DS0913_2.yaml  DS0913_2_registration_config.yaml  endoscope_config.yaml  registration_config.yaml  template_config.yaml  test_handeye_pivot.yaml  test_phantom.blend  test_phantom.blend1  test_pointer.yaml  test_registration_config.yaml
example/ADF/: marker.blend  marker.blend1  marker.yaml  marker.yaml.old  registration_cube.blend  registration_cube.blend1  registration_cube.yaml  registration_cube.yaml.old  registration_test.yaml  stryker_drill.yaml  test.yaml  tracker.blend  tracker.blend1  tracker.yaml  tracker.yaml.old
example/ADF/blender/: registration_cube.blend  stryker_drill.blend
example/ADF/high_res/: Cube_001.STL  Cylinder.STL  drill_shaft.mtl  marker_body.STL  marker_body.mtl  stryker_drill.STL
example/ADF/low_res/: Cube_coll_shape_1.STL  Sphere_001.mtl  Sphere_13.mtl  drill_tip.mtl  marker.STL  stryker_drill.mtl
example/test/: test_adf.yaml  test_config.yaml
script/: modifycsv.py  testrigidtransformation.py
src/plugin/: registration_plugin.cpp  registration_plugin.h  robot_control.cpp  robot_control.h  test_plugin.cpp  test_plugin.h
src/registration/: hand_eye_calibration.cpp  hand_eye_calibration.h  pivot_calibration.cpp  pivot_calibration.h  point_cloud_registration.cpp  point_cloud_registration.h
src/utils/: CRTKInterface.cpp  CRTKInterface.h  camera_panel_manager.cpp
